--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <header class="header">
         <nav class="header__nav">
             <div class="header__nav__contenedor contenedor">
-                <div class="header__nav__contenedor--logo">
-                    <!-- Leslie Velásquez -->
-                    <img src="img/Logo.png" alt="Logo">
+                <div class="logo pt-1">
+                    Leslie Velásquez
+                    <!-- <img src="img/Logo.png" alt="Logo"> -->
                 </div>
                 <ul class="header__nav__contenedor__menu">
                     <li class="header__nav__contenedor__menu__item"><a href="#quien-soy" class="header__nav__contenedor__menu__item--link color-black ff-1">Quien soy</a></li>
@@ -30,9 +30,9 @@
     <section class="banner" id="quien-soy">
         <img src="img/Banner.png" alt="Banner">
     </section>
-    <section class="perfil">
-        <div class="perfil__contenedor contenedor block">
-                <h1 class="titulo">quien soy</h1>
+    <section class="perfil pb-5 pt-5">
+        <div class="perfil__contenedor contenedor">
+                <h1 class="titulo-n2 mb-2">quien soy</h1>
                 <div class="perfil__contenedor__contenido">
                     <div class="perfil__contenedor__contenido__descripcion">
                         <p class="perfil__contenedor__contenido__descripcion--texto pl-1 pb-1 ff-1">
@@ -49,40 +49,102 @@
                 </div>
         </div>
     </section>
-    <section class="certificados" id="certificados">
-        <div class="certificados__contenedor contenedor block">
-            <h1 class="titulo">certificados</h1>
+    <section class="certificados pb-5 pt-5" id="certificados">
+        <div class="certificados__contenedor contenedor">
+            <h1 class="titulo-n2 mb-2">certificados</h1>
             <div class="certificados__contenedor__caja">
                 <div class="certificados__contenedor__caja--imagen">
                     <!-- Programar -->
-                    <img src="img/Programacion_basica.png" alt="Programacion Basica">
-                </div>
-                <div class="certificados__contenedor__caja--nombre ff-1 color-black">
-                    <p>Programación Básica</p>
+                    <!-- <img src="img/certificados/diploma-css-grid-layout-2017_page-0001.jpg" alt="CSS Grid Layout"> -->
+                    <ul class="slider">
+                        <li id="slide1">
+                          <img src="img/certificados/diploma-css-grid-layout-2017_page-0001.jpg" alt="CSS Grid Layout"/>
+                          <div class="certificados__contenedor__caja--nombre ff-1 color-black pt-2">
+                            <p>css grid layout</p>
+                          </div>
+                        </li>
+                        <li id="slide2">
+                          <img src="img/certificados/diploma-diseno-email-2016_page-0001.jpg" alt="Diseño html y css para emails"/>
+                          <div class="certificados__contenedor__caja--nombre ff-1 color-black pt-2">
+                            <p>Diseño html y css para emails</p>
+                          </div>
+                        </li>
+                        <li id="slide3">
+                          <img src="img/certificados/diploma-programacion-basica_page-0001.jpg" alt="Programación Básica">
+                          <div class="certificados__contenedor__caja--nombre ff-1 color-black pt-2">
+                            <p>Programación Básica</p>
+                          </div>
+                        </li>
+                        <li id="slide4">
+                          <img src="img/certificados/diploma-illustrator_page-0001.jpg" alt="Ilustrator">
+                          <div class="certificados__contenedor__caja--nombre ff-1 color-black pt-2">
+                            <p>Ilustrator</p>
+                          </div>
+                        </li>
+                        <li id="slide5">
+                          <img src="img/certificados/diploma-photoshop-basico_page-0001.jpg" alt="Photoshop">
+                          <div class="certificados__contenedor__caja--nombre ff-1 color-black pt-2">
+                            <p>Photoshop</p>
+                          </div>
+                        </li>
+                      </ul>
+                      
+                      <ul class="menu">
+                        <li>
+                          <a href="#slide1">1</a>
+                        </li>
+                        <li>
+                          <a href="#slide2">2</a>
+                        </li>
+                         <li>
+                          <a href="#slide3">3</a>
+                        </li>
+                        <li>
+                            <a href="#slide4">4</a>
+                        </li>
+                        <li>
+                            <a href="#slide5">5</a>
+                        </li>
+                      </ul>
                 </div>
             </div>
         </div>
     </section>
-    <section class="portafolio" id="portafolio">
-        <div class="portafolio__contenedor contenedor block">
-            <h1 class="titulo">portafolio</h1>
+    <section class="portafolio pb-5 pt-5" id="portafolio">
+        <div class="portafolio__contenedor contenedor">
+            <h1 class="titulo-n2 mb-2">portafolio</h1>
             <div class="portafolio__contenedor__columna">
-            <article class="portafolio__contenedor__columna--item">
-                <img src="img/portafolio/Pienik.png" alt="Construcción y minería Pienik">
-                <div class="ff-1">
-                    <a href="http://pieniksac.com/" target="_blank" class="color-black">Construcción y Minería Pienik S.A.C</a>
+            <article class="portafolio__contenedor__columna__item">
+                <div class="portafolio__contenedor__columna__item__imgBox">
+                    <img src="img/portafolio/Pienik.png" alt="Construcción y minería Pienik">
+                    <div>
+                        <i class="fas fa-plus"></i> 
+                    </div>
+                </div>
+                <div class="portafolio__contenedor__columna__item__data">
+                    <p class="resumen-n3 text-italic text-center">Construcción y Minería Pienik S.A.C</p>
                 </div>
             </article>
-            <article class="portafolio__contenedor__columna--item">
-                <img src="img/portafolio/sismo.png" alt="Prepárate ante un sismo">
-                <div class="ff-1">
-                    <a href="https://www.aon.com.pe/prevencionsismos/" target="_blank" class="color-black">Prepárate ante un sismo</a>
+            <article class="portafolio__contenedor__columna__item">
+                <div class="portafolio__contenedor__columna__item__imgBox">
+                    <img src="img/portafolio/sismo.png" alt="Prepárate ante un sismo">
+                    <div>
+                        <i class="fas fa-plus"></i> 
+                    </div>
+                </div>
+                <div class="portafolio__contenedor__columna__item__data">
+                    <p class="resumen-n3 text-italic text-center">Prepárate ante un sismo</p>
                 </div>
             </article>
-            <article class="portafolio__contenedor__columna--item">
-                <img src="img/portafolio/medidas_seguridad.png" alt="Medidas de seguridad vial a tener en cuenta por fiestas de fin de año">
-                <div class="ff-1">
-                    <a href="https://www.aon.com.pe/SeguridadVial/" target="_blank" class="color-black">Medidas de seguridad vial a tener en cuenta por fiestas de fin de año</a>
+            <article class="portafolio__contenedor__columna__item">
+                <div class="portafolio__contenedor__columna__item__imgBox">
+                    <img src="img/portafolio/medidas_seguridad.png" alt="Medidas de seguridad vial a tener en cuenta por fiestas de fin de año">
+                    <div>
+                        <i class="fas fa-plus"></i> 
+                    </div>
+                </div>
+                <div class="portafolio__contenedor__columna__item__data">
+                    <p class="resumen-n3 text-italic text-center">Medidas de seguridad</p>
                 </div>
             </article>
             </div>
@@ -90,22 +152,23 @@
     </section>
     <footer class="footer">
         <div class="footer__contenido contenedor">
-            <div class="footer__contenido--logo">
-                <img src="img/Logo.png" alt="Logo">
+            <div class="logo pt-1">
+                Leslie Velásquez
+                <!-- <img src="img/Logo.png" alt="Logo"> -->
             </div>
             <div class="footer__contenido--copyright ff-1">
                 Copyright © 2022 --- Leslie Velásquez Rosazza
             </div>
             <div class="footer__contenido__redes">
-                <div class="footer__contenido__redes--facebook estilo">
+                <a href="https://www.facebook.com/leslierosazza/" target="_blank">
                     <i class="fab fa-facebook"></i>
-                </div>
-                <div class="footer__contenido__redes--telegram estilo">
-                    <i class="fab fa-telegram"></i>
-                </div>
-                <div class="footer__contenido__redes--twitter estilo">
-                        <i class="fab fa-twitter"></i>
-                </div>
+                </a>
+                <a href="https://www.linkedin.com/in/leslie-velasquez-rosazza/" target="_blank">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+                <a href="https://twitter.com/LeslieVRosazza" target="_blank">
+                    <i class="fab fa-twitter"></i>
+                </a>
             </div>
         </div>
     </footer>
