--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
                 </ul>
             </div>
         </nav>
+        <div class="header__banner">
+            <img src="img/Banner.png" alt="Banner">
+        </div>
     </header>
-    <section class="banner" id="quien-soy">
-        <img src="img/Banner.png" alt="Banner">
-    </section>
-    <section class="perfil pb-5 pt-5">
+    <section class="perfil pb-5 pt-5" id="quien-soy">
         <div class="perfil__contenedor contenedor">
                 <h1 class="titulo-n2 mb-2">quien soy</h1>
                 <div class="perfil__contenedor__contenido">
@@ -54,57 +54,8 @@
             <h1 class="titulo-n2 mb-2">certificados</h1>
             <div class="certificados__contenedor__caja">
                 <div class="certificados__contenedor__caja--imagen">
-                    <!-- Programar -->
-                    <!-- <img src="img/certificados/diploma-css-grid-layout-2017_page-0001.jpg" alt="CSS Grid Layout"> -->
                     <ul class="slider">
-                        <li id="slide1">
-                          <img src="img/certificados/diploma-css-grid-layout-2017_page-0001.jpg" alt="CSS Grid Layout"/>
-                          <div class="certificados__contenedor__caja--nombre ff-1 color-black pt-2">
-                            <p>css grid layout</p>
-                          </div>
-                        </li>
-                        <li id="slide2">
-                          <img src="img/certificados/diploma-diseno-email-2016_page-0001.jpg" alt="Diseño html y css para emails"/>
-                          <div class="certificados__contenedor__caja--nombre ff-1 color-black pt-2">
-                            <p>Diseño html y css para emails</p>
-                          </div>
-                        </li>
-                        <li id="slide3">
-                          <img src="img/certificados/diploma-programacion-basica_page-0001.jpg" alt="Programación Básica">
-                          <div class="certificados__contenedor__caja--nombre ff-1 color-black pt-2">
-                            <p>Programación Básica</p>
-                          </div>
-                        </li>
-                        <li id="slide4">
-                          <img src="img/certificados/diploma-illustrator_page-0001.jpg" alt="Ilustrator">
-                          <div class="certificados__contenedor__caja--nombre ff-1 color-black pt-2">
-                            <p>Ilustrator</p>
-                          </div>
-                        </li>
-                        <li id="slide5">
-                          <img src="img/certificados/diploma-photoshop-basico_page-0001.jpg" alt="Photoshop">
-                          <div class="certificados__contenedor__caja--nombre ff-1 color-black pt-2">
-                            <p>Photoshop</p>
-                          </div>
-                        </li>
-                      </ul>
-                      
-                      <ul class="menu">
-                        <li>
-                          <a href="#slide1">1</a>
-                        </li>
-                        <li>
-                          <a href="#slide2">2</a>
-                        </li>
-                         <li>
-                          <a href="#slide3">3</a>
-                        </li>
-                        <li>
-                            <a href="#slide4">4</a>
-                        </li>
-                        <li>
-                            <a href="#slide5">5</a>
-                        </li>
+                        <img name="slider" alt="">
                       </ul>
                 </div>
             </div>
@@ -172,5 +123,6 @@
             </div>
         </div>
     </footer>
+    <script src="js/codigo.js"></script>
 </body>
 </html>
