commit actualizacion index.html codigo.js y constantes.scss

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     Leslie Velásquez
                     <!-- <img src="img/Logo.png" alt="Logo"> -->
                 </div>
-                <ul class="header__nav__contenedor__menu">
+                <ul class="header__nav__contenedor__menu fw">
                     <li class="header__nav__contenedor__menu__item"><a href="#quien-soy" class="header__nav__contenedor__menu__item--link color-black ff-1">Quien soy</a></li>
                     <li class="header__nav__contenedor__menu__item"><a href="#certificados" class="header__nav__contenedor__menu__item--link color-black ff-1">Certificados</a></li>
                     <li class="header__nav__contenedor__menu__item"><a href="#portafolio" class="header__nav__contenedor__menu__item--link color-black ff-1">Portafolio</a></li>
@@ -56,7 +56,9 @@
                 <div class="certificados__contenedor__caja--imagen">
                     <ul class="slider">
                         <img name="slider" alt="">
-                      </ul>
+                        <div class="menu" id="menu"></div>
+                    </ul>
+
                 </div>
             </div>
         </div>
