Insertar imagenes y agregar 2 portafolios

--- a/index.html
+++ b/index.html
@@ -75,18 +75,23 @@
                     </div>
                 </div>
                 <div class="portafolio__contenedor__columna__item__data">
-                    <p class="resumen-n3 text-italic text-center">Construcción y Minería Pienik S.A.C</p>
+                    <a href="https://pieniksac.com/" target="_blank">
+                        <p class="resumen-n3 text-italic text-center">Construcción y Minería Pienik S.A.C</p>
+                    </a>
                 </div>
             </article>
             <article class="portafolio__contenedor__columna__item">
                 <div class="portafolio__contenedor__columna__item__imgBox">
-                    <img src="img/portafolio/sismo.png" alt="Prepárate ante un sismo">
+                    <img src="img/portafolio/sismo.png" alt="Prepárate ante un sismo" >
                     <div>
                         <i class="fas fa-plus"></i> 
                     </div>
                 </div>
                 <div class="portafolio__contenedor__columna__item__data">
-                    <p class="resumen-n3 text-italic text-center">Prepárate ante un sismo</p>
+                    <a href="https://leslierosazza.github.io/maqueta-actual/" target="_blank">
+                        <p class="resumen-n3 text-italic text-center">Prepárate ante un sismo</p>
+                    </a>
+                    
                 </div>
             </article>
             <article class="portafolio__contenedor__columna__item">
@@ -97,10 +102,53 @@
                     </div>
                 </div>
                 <div class="portafolio__contenedor__columna__item__data">
-                    <p class="resumen-n3 text-italic text-center">Medidas de seguridad</p>
+                    <a href="https://leslierosazza.github.io/infografia2/" target="_blank">
+                        <p class="resumen-n3 text-italic text-center">Medidas de seguridad</p>
+                    </a>
                 </div>
             </article>
             </div>
+            <div class="portafolio__contenedor__columna">
+                <article class="portafolio__contenedor__columna__item">
+                    <div class="portafolio__contenedor__columna__item__imgBox">
+                        <img src="img/portafolio/guitarras-invie.jpg" alt="Guitarras invie">
+                        <div>
+                            <i class="fas fa-plus"></i> 
+                        </div>
+                    </div>
+                    <div class="portafolio__contenedor__columna__item__data">
+                        <a href="https://leslierosazza.github.io/invie/index.html" target="_blank">
+                            <p class="resumen-n3 text-italic text-center">Invie</p>
+                        </a>
+                    </div>
+                </article>
+                <article class="portafolio__contenedor__columna__item">
+                    <div class="portafolio__contenedor__columna__item__imgBox">
+                        <img src="img/portafolio/blog-platzi.jpg" alt="Blog Platzi" >
+                        <div>
+                            <i class="fas fa-plus"></i> 
+                        </div>
+                    </div>
+                    <div class="portafolio__contenedor__columna__item__data">
+                        <a href="https://leslierosazza.github.io/blog-platzi/" target="_blank">
+                            <p class="resumen-n3 text-italic text-center">Blog Platzi</p>
+                        </a>  
+                    </div>
+                </article>
+                <article class="portafolio__contenedor__columna__item">
+                    <div class="portafolio__contenedor__columna__item__imgBox">
+                        <img src="img/portafolio/medidas_seguridad.png" alt="Medidas de seguridad vial a tener en cuenta por fiestas de fin de año">
+                        <div>
+                            <i class="fas fa-plus"></i> 
+                        </div>
+                    </div>
+                    <div class="portafolio__contenedor__columna__item__data">
+                        <a href="https://leslierosazza.github.io/infografia2/" target="_blank">
+                            <p class="resumen-n3 text-italic text-center">Medidas de seguridad</p>
+                        </a>
+                    </div>
+                </article>
+                </div>
         </div>
     </section>
     <footer class="footer">
