Agregue portafolio Quiz Ninja

--- a/index.html
+++ b/index.html
@@ -137,14 +137,14 @@
                 </article>
                 <article class="portafolio__contenedor__columna__item">
                     <div class="portafolio__contenedor__columna__item__imgBox">
-                        <img src="img/portafolio/medidas_seguridad.png" alt="Medidas de seguridad vial a tener en cuenta por fiestas de fin de año">
+                        <img src="img/portafolio/Quiz-Ninja.jpg" alt="Medidas de seguridad vial a tener en cuenta por fiestas de fin de año">
                         <div>
                             <i class="fas fa-plus"></i> 
                         </div>
                     </div>
                     <div class="portafolio__contenedor__columna__item__data">
-                        <a href="https://leslierosazza.github.io/infografia2/" target="_blank">
-                            <p class="resumen-n3 text-italic text-center">Medidas de seguridad</p>
+                        <a href="https://leslierosazza.github.io/Quiz-Ninja/" target="_blank">
+                            <p class="resumen-n3 text-italic text-center">Quiz Ninja</p>
                         </a>
                     </div>
                 </article>
