Actualice el alt Quiz-Ninja al index.html

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 </article>
                 <article class="portafolio__contenedor__columna__item">
                     <div class="portafolio__contenedor__columna__item__imgBox">
-                        <img src="img/portafolio/Quiz-Ninja.jpg" alt="Medidas de seguridad vial a tener en cuenta por fiestas de fin de año">
+                        <img src="img/portafolio/Quiz-Ninja.jpg" alt="Quiz-Ninja">
                         <div>
                             <i class="fas fa-plus"></i> 
                         </div>
