Actualizando index.html

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <div class="portafolio__contenedor__columna">
                 <article class="portafolio__contenedor__columna__item">
                     <div class="portafolio__contenedor__columna__item__imgBox">
-                        <img src="img/portafolio/guitarras-invie.jpg" alt="Guitarras invie">
+                        <img src="img/portafolio/guitarras-invie.png" alt="Guitarras invie">
                         <div>
                             <i class="fas fa-plus"></i> 
                         </div>
@@ -124,7 +124,7 @@
                 </article>
                 <article class="portafolio__contenedor__columna__item">
                     <div class="portafolio__contenedor__columna__item__imgBox">
-                        <img src="img/portafolio/blog-platzi.jpg" alt="Blog Platzi" >
+                        <img src="img/portafolio/blog-platzi.png" alt="Blog Platzi" >
                         <div>
                             <i class="fas fa-plus"></i> 
                         </div>
@@ -137,7 +137,7 @@
                 </article>
                 <article class="portafolio__contenedor__columna__item">
                     <div class="portafolio__contenedor__columna__item__imgBox">
-                        <img src="img/portafolio/Quiz-Ninja.jpg" alt="Quiz-Ninja">
+                        <img src="img/portafolio/Quiz-Ninja.png" alt="Quiz-Ninja">
                         <div>
                             <i class="fas fa-plus"></i> 
                         </div>
