Actualizando el index.html comentando div

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
             <article class="portafolio__contenedor__columna__item">
                 <div class="portafolio__contenedor__columna__item__imgBox">
                     <img src="img/portafolio/Pienik.png" alt="Construcción y minería Pienik">
-                    <div>
+                    <!-- <div>
                         <i class="fas fa-plus"></i> 
-                    </div>
+                    </div> -->
                 </div>
                 <div class="portafolio__contenedor__columna__item__data">
                     <a href="https://pieniksac.com/" target="_blank">
@@ -83,9 +83,9 @@
             <article class="portafolio__contenedor__columna__item">
                 <div class="portafolio__contenedor__columna__item__imgBox">
                     <img src="img/portafolio/sismo.png" alt="Prepárate ante un sismo" >
-                    <div>
+                    <!-- <div>
                         <i class="fas fa-plus"></i> 
-                    </div>
+                    </div> -->
                 </div>
                 <div class="portafolio__contenedor__columna__item__data">
                     <a href="https://leslierosazza.github.io/maqueta-actual/" target="_blank">
@@ -97,9 +97,9 @@
             <article class="portafolio__contenedor__columna__item">
                 <div class="portafolio__contenedor__columna__item__imgBox">
                     <img src="img/portafolio/medidas_seguridad.png" alt="Medidas de seguridad vial a tener en cuenta por fiestas de fin de año">
-                    <div>
+                    <!-- <div>
                         <i class="fas fa-plus"></i> 
-                    </div>
+                    </div> -->
                 </div>
                 <div class="portafolio__contenedor__columna__item__data">
                     <a href="https://leslierosazza.github.io/infografia2/" target="_blank">
@@ -112,9 +112,9 @@
                 <article class="portafolio__contenedor__columna__item">
                     <div class="portafolio__contenedor__columna__item__imgBox">
                         <img src="img/portafolio/guitarras-invie.png" alt="Guitarras invie">
-                        <div>
+                        <!-- <div>
                             <i class="fas fa-plus"></i> 
-                        </div>
+                        </div> -->
                     </div>
                     <div class="portafolio__contenedor__columna__item__data">
                         <a href="https://leslierosazza.github.io/invie/index.html" target="_blank">
@@ -125,9 +125,9 @@
                 <article class="portafolio__contenedor__columna__item">
                     <div class="portafolio__contenedor__columna__item__imgBox">
                         <img src="img/portafolio/blog-platzi.png" alt="Blog Platzi" >
-                        <div>
+                        <!-- <div>
                             <i class="fas fa-plus"></i> 
-                        </div>
+                        </div> -->
                     </div>
                     <div class="portafolio__contenedor__columna__item__data">
                         <a href="https://leslierosazza.github.io/blog-platzi/" target="_blank">
@@ -138,9 +138,9 @@
                 <article class="portafolio__contenedor__columna__item">
                     <div class="portafolio__contenedor__columna__item__imgBox">
                         <img src="img/portafolio/Quiz-Ninja.png" alt="Quiz-Ninja">
-                        <div>
+                        <!-- <div>
                             <i class="fas fa-plus"></i> 
-                        </div>
+                        </div> -->
                     </div>
                     <div class="portafolio__contenedor__columna__item__data">
                         <a href="https://leslierosazza.github.io/Quiz-Ninja/" target="_blank">
