--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
                     <li class="header__nav__contenedor__menu__item"><a href="#certificados" class="header__nav__contenedor__menu__item--link color-black ff-1">Certificados</a></li>
                     <li class="header__nav__contenedor__menu__item"><a href="#portafolio" class="header__nav__contenedor__menu__item--link color-black ff-1">Portafolio</a></li>
                 </ul>
+                <div class="header__nav__contenedor--btnMenu">
+                    <i class="fas fa-bars"></i>
+                </div>
             </div>
         </nav>
         <div class="header__banner">
