Creando un boton hacia arriba go top

--- a/index.html
+++ b/index.html
@@ -187,6 +187,11 @@
             </div>
         </div>
     </footer>
+    <div class="go-top-contaniner">
+        <div class="go-top-button">
+            <i class="fas fa-chevron-up"></i>
+        </div>
+    </div>
     <script src="js/codigo.js"></script>
 </body>
 </html>
