Creando el modulo contactos

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <li class="header__nav__contenedor__menu__item"><a href="#quien-soy" class="header__nav__contenedor__menu__item--link color-black ff-1">Quien soy</a></li>
                     <li class="header__nav__contenedor__menu__item"><a href="#certificados" class="header__nav__contenedor__menu__item--link color-black ff-1">Certificados</a></li>
                     <li class="header__nav__contenedor__menu__item"><a href="#portafolio" class="header__nav__contenedor__menu__item--link color-black ff-1">Portafolio</a></li>
+                    <li class="header__nav__contenedor__menu__item"><a href="#contactos" class="header__nav__contenedor__menu__item--link color-black ff-1">Contactos</a></li>
                 </ul>
                 <div class="header__nav__contenedor--btnMenu">
                     <i class="fas fa-bars"></i>
@@ -163,6 +164,33 @@
                     </div>
                 </article>
                 </div>
+        </div>
+    </section>
+    <section class="contacto pt-10 pb-10" id="contactos">
+        <div class="contacto__contenedor contenedor">
+            <h2 class="titulo-n2 mb-2">contactos</h2>
+            <p class="resumen-n2 mb-7">Me pueden escribir para solicitar cotizaciones.</p>
+            <form action="" class="contacto__contenedor__form">
+                <div class="contacto__contenedor__form__col">
+                    <div class="contacto__contenedor__form__col--formGroup">
+                        <input type="text" placeholder="Tu nombre">
+                    </div>
+                    <div class="contacto__contenedor__form__col--formGroup">
+                        <input type="text" placeholder="Tu correo">
+                    </div>
+                    <div class="contacto__contenedor__form__col--formGroup">
+                        <input type="text" placeholder="Tu numero">
+                    </div>
+                </div>
+                <div class="contacto__contenedor__form__col">
+                    <div class="contacto__contenedor__form__col--formGroup">
+                        <textarea cols="30" rows="5" placeholder="Tu Mensaje" class="height-100"></textarea>
+                    </div>
+                </div>
+                <div class="contacto__contenedor__form--btnBox text-center mt-5">
+                    <input type="submit" class="btn btn-amarillo" value="enviar mensaje">
+                </div>
+            </form>
         </div>
     </section>
     <footer class="footer">
