Poniendo un meta description y keywords en el index.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="css/estilos.css">
     <title>Leslie Velásquez Rosazza</title>
+    <meta name="description" content= "Hola! Mi nombre es Leslie y soy Ingeniera de Sistemas." />
+    <meta name="keywords" content="leslierosazza, Frontend, Diseñadora Web"/>
+    <meta http-equiv="cache-control" content="no-cache"/>
+
 </head>
 <body>
     <header class="header">
