Cambios en el header

--- a/index.html
+++ b/index.html
@@ -19,24 +19,24 @@
     <header class="header">
         <nav class="header__nav">
             <div class="header__nav__contenedor contenedor">
-                <div class="logo pt-1">
+                <a class="header__nav__contenedor--logo">
                     Leslie Velásquez
                     <!-- <img src="img/Logo.png" alt="Logo"> -->
-                </div>
+                </a>
                 <ul class="header__nav__contenedor__menu fw">
-                    <li class="header__nav__contenedor__menu__item"><a href="#quien-soy" class="header__nav__contenedor__menu__item--link color-black ff-1">Quien soy</a></li>
-                    <li class="header__nav__contenedor__menu__item"><a href="#certificados" class="header__nav__contenedor__menu__item--link color-black ff-1">Certificados</a></li>
-                    <li class="header__nav__contenedor__menu__item"><a href="#portafolio" class="header__nav__contenedor__menu__item--link color-black ff-1">Portafolio</a></li>
-                    <li class="header__nav__contenedor__menu__item"><a href="#contactos" class="header__nav__contenedor__menu__item--link color-black ff-1">Contactos</a></li>
+                    <li class="header__nav__contenedor__menu__item"><a href="#quien-soy" class="header__nav__contenedor__menu__item--link color-white ff-1">Quien soy</a></li>
+                    <li class="header__nav__contenedor__menu__item"><a href="#certificados" class="header__nav__contenedor__menu__item--link color-white ff-1">Certificados</a></li>
+                    <li class="header__nav__contenedor__menu__item"><a href="#portafolio" class="header__nav__contenedor__menu__item--link color-white ff-1">Portafolio</a></li>
+                    <li class="header__nav__contenedor__menu__item"><a href="#contactos" class="header__nav__contenedor__menu__item--link color-white ff-1">Contactos</a></li>
                 </ul>
                 <div class="header__nav__contenedor--btnMenu">
                     <i class="fas fa-bars"></i>
                 </div>
             </div>
         </nav>
-        <div class="header__banner">
+        <!-- <div class="header__banner">
             <img src="img/Banner.png" alt="Banner">
-        </div>
+        </div> -->
     </header>
     <section class="perfil pb-5 pt-5" id="quien-soy">
         <div class="perfil__contenedor contenedor">
