Pagina index, constantes y estilos actualizados

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="perfil__contenedor__contenido">
                     <div class="perfil__contenedor__contenido__descripcion">
                         <p class="perfil__contenedor__contenido__descripcion--texto pl-1 pb-1 ff-1 text-justify">
-                            Hola! Mi nombre es Leslie y soy Ingeniera de Sistemas con experiencia en la gestión de sitios web como Joomla, drupal, wordpress, así  como en la instalación y configuración de sistemas operativos Windows / Linux y configuración de redes y como Operador Informatico y Operador de Centro de Computo. Con certificación en Programación Básica, diseño HTML y CSS para email, Responsive Design,  Ilustrator, Photoshop, git y github. Me he especializado en Desarrollo web profesional. Me gusta el diseño y desarrollo web. 
+                            Hola! Mi nombre es Leslie y soy Ingeniera de Sistemas de la Universidad privada Inca Garcilaso De La Vega - UIGV con experiencia en la gestión de sitios web como Joomla, drupal, wordpress, experiencia en el diseño y desarrollo en HTML, CSS, JavaScript y SASS, así  como en la instalación y configuración de sistemas operativos Windows / Linux y configuración de redes y como Operador Informático y Operador de Centro de Cómputo. Con certificación en Programación Básica, diseño HTML y CSS para email, Responsive Design,  Illustrator, Photoshop, sistema de control de versiones git y github. Me he especializado en Desarrollo web profesional y estoy haciendo un Master Universitario en Diseño y Desarrollo de Interfaz de Usuario Web en la Universidad Internacional de La Rioja - UNIR. Me gusta el diseño y desarrollo web. 
                         
                         </p>
                     </div>
