Cambios en el formulario de contactenos

--- a/index.html
+++ b/index.html
@@ -187,18 +187,18 @@
             method="POST" class="contacto__contenedor__form" id="form">
                 <div class="contacto__contenedor__form__col">
                     <div class="contacto__contenedor__form__col--formGroup">
-                        <input type="text" placeholder="Tu nombre" name="name" id="name" required>
+                        <input type="text" class="caja_texto" placeholder="Tu nombre" name="name" id="name" required>
                     </div>
                     <div class="contacto__contenedor__form__col--formGroup">
-                        <input type="text" placeholder="Tu correo" name="correo" id="correo" required>
+                        <input type="text" class="caja_texto" placeholder="Tu correo" name="correo" id="correo" required>
                     </div>
                     <div class="contacto__contenedor__form__col--formGroup">
-                        <input type="text" placeholder="Tu numero" name="celular" id="celular" required>
+                        <input type="text" class="caja_texto" placeholder="Tu numero" name="celular" id="celular" required>
                     </div>
                 </div>
                 <div class="contacto__contenedor__form__col">
                     <div class="contacto__contenedor__form__col--formGroup">
-                        <textarea cols="30" rows="5" placeholder="Tu Mensaje" name="mensaje" id="mensaje" class="height-100" required></textarea>
+                        <textarea class="caja_texto" cols="30" rows="5" placeholder="Tu Mensaje" name="mensaje" id="mensaje" class="height-100" required></textarea>
                     </div>
                 </div> 
                 <div class="contacto__contenedor__form--btnBox text-center mt-5">
